fix homepage horizontal scroll bug

--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,7 @@
     width: 100%;
     gap: 72px;
     position: relative;
+    background: center center / cover no-repeat url(../element/icon/logo.png);
 }
 
 .hero-section .animation{
@@ -53,6 +54,7 @@
 @media (max-width:1024px) {
     .hero-section{
         gap: 48px;
+        background-size: 120%;
     }
     .hero-section .animation{
         height: 400px;
@@ -69,6 +71,7 @@
 @media (max-width:768px) {
     .hero-section{
         gap: 24px;
+        background-size: 150%;
     }
     .hero-section .animation{
         width: 100%;
@@ -82,6 +85,8 @@
         width: 200%;
     }
 }
+
+
 
 /* -------- footer ------- */
 
@@ -173,6 +178,7 @@
     width: 100%;
     gap: 120px;
     margin: 100px 0 100px;
+    overflow: hidden;
 }
 
 .stone-section .stone-svg{
